[tool.poetry]
name = "bgpredict"
version = "0.1.0"
description = ""
authors = ["spencer <spencerweston3214@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11"
pandas = ">=1.4"
dropbox = "^11.30"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
