[tool.poetry]
name = "bgpredict"
version = "0.1.0"
description = ""
authors = ["spencer <spencerweston3214@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10.0, <3.11"
aiobotocore = ">=2.1.0,<2.2.0"
botocore = ">=1.23.24,<1.23.25"
pandas = ">=1.4"
dropbox = "^11.30"
boto3 = ">=1.2"
s3fs = ">=2022.01.0"
sortedcontainers = ">=2.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
